<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/scrollView"
    android:background="@drawable/quiz_background_slider_flipped"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="50dp"
        tools:context=".RegistrationActivity">

        <!-- Registration label -->
        <TextView
            android:id="@+id/textReg"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/label_reg"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.095" />

        <TextView
            android:id="@+id/fNameLabel"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/firstName" />

        <EditText
            android:id="@+id/edtFName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstName"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textReg"
            app:layout_constraintVertical_bias="0.118" />

        <TextView
            android:id="@+id/lNameLabel"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lastName" />

        <EditText
            android:id="@+id/edtLName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastName"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.472"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtFName"
            app:layout_constraintVertical_bias="0.022" />

        <TextView
            android:id="@+id/DOBLabel"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dob" />

        <EditText
            android:id="@+id/edtDOB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dobFormat"
            android:importantForAutofill="no"
            android:inputType="date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.469"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtLName"
            app:layout_constraintVertical_bias="0.023" />

        <TextView
            android:id="@+id/emailLabel"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <EditText
            android:id="@+id/edtRegEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.475"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtDOB"
            app:layout_constraintVertical_bias="0.026" />

        <TextView
            android:id="@+id/passwordLabel"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            android:id="@+id/edtRegPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.028" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_reg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/white"
            android:background="@color/colorPrimaryDark"
            android:onClick="registerUser"/>

        <TextView
            android:id="@+id/textAcc"
            android:layout_width="match_parent"
            android:layout_height="20sp"
            android:text="@string/promptLogIn"
            android:textAlignment="center" />

        <Button
            android:id="@+id/buttonGoToLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_login"
            android:textColor="@color/white"
            android:background="@color/colorPrimaryDark"
            android:onClick="goToLogIn"/>

    </LinearLayout>
</ScrollView>