<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="50dp"
    android:background="@drawable/quiz_background_slider_flipped"
    tools:context=".LoginActivity">

    <!-- Login in label -->
    <TextView
        android:id="@+id/textLogin"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:text="@string/label_login"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.095" />

    <TextView
        android:id="@+id/textLoginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/colorPrimaryDark"
        />

    <EditText
        android:id="@+id/edtLoginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.118" />

    <TextView
        android:id="@+id/textLoginPassword"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password" />

    <EditText
        android:id="@+id/edtLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <Button
        android:id="@+id/buttonLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white"
        android:background="@color/colorPrimaryDark"
        android:onClick="logIn"/>

    <TextView
        android:id="@+id/textNoAcc"
        android:layout_width="match_parent"
        android:layout_height="20sp"
        android:text="@string/promptRegister"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/buttonReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_reg"
        android:textColor="@color/white"
        android:background="@color/colorPrimaryDark"
        android:onClick="goToRegistration"/>

</LinearLayout>