<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textReady"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/promptPlay"
        android:textSize="30sp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.356" />

    <TextView
        android:id="@+id/textInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        android:paddingRight="60dp"
        android:paddingLeft="60dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textReady"
        app:layout_constraintVertical_bias="0.036" />

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/play"
        app:layout_constraintBottom_toTopOf="@+id/btnHistory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInstructions"
        app:layout_constraintVertical_bias="0.637"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btnHistory"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/history"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInstructions"
        app:layout_constraintVertical_bias="0.448"
        android:background="@color/colorAccent"/>

</androidx.constraintlayout.widget.ConstraintLayout>